--- a/requirements.txt
+++ b/requirements.txt
@@ -11,20 +11,26 @@ async-timeout==4.0.3
 attrs==25.3.0
 backoff==2.2.1
 bcrypt==4.3.0
+beautifulsoup4==4.13.4
+blis==1.3.0
 Brotli @ file:///Users/runner/miniforge3/conda-bld/brotli-split_1725267563793/work
 build==1.2.2.post1
 cachetools==5.5.2
+catalogue==2.0.10
 certifi @ file:///home/conda/feedstock_root/build_artifacts/certifi_1739515848642/work/certifi
 cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1725560574711/work
 charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1735929714516/work
 chroma-hnswlib==0.7.6
 chromadb==0.6.3
 click @ file:///home/conda/feedstock_root/build_artifacts/click_1734858813237/work
+cloudpathlib==0.21.0
 colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1733218098505/work
 coloredlogs==15.0.1
 comm @ file:///home/conda/feedstock_root/build_artifacts/comm_1733502965406/work
+confection==0.1.5
 contourpy==1.3.2
 cycler==0.12.1
+cymem==2.0.11
 dataclasses-json==0.6.7
 debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1744321285678/work
 decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1740384970518/work
@@ -35,21 +41,26 @@ durationpy==0.9
 email_validator @ file:///home/conda/feedstock_root/build_artifacts/email-validator-meta_1733300719943/work
 exceptiongroup @ file:///home/conda/feedstock_root/build_artifacts/exceptiongroup_1733208806608/work
 executing @ file:///home/conda/feedstock_root/build_artifacts/executing_1733569351617/work
+faiss-cpu==1.10.0
 fastapi @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_fastapi_1742822207/work
 fastapi-cli @ file:///home/conda/feedstock_root/build_artifacts/fastapi-cli_1734302308128/work
 fastjsonschema==2.21.1
 ffmpy @ file:///home/conda/feedstock_root/build_artifacts/ffmpy_1659474992694/work
 filelock @ file:///home/conda/feedstock_root/build_artifacts/filelock_1741969488311/work
+filetype==1.2.0
 flatbuffers==25.2.10
 fonttools==4.57.0
 frozenlist==1.6.0
 fsspec @ file:///home/conda/feedstock_root/build_artifacts/fsspec_1743437245292/work
+google-ai-generativelanguage==0.6.17
+google-api-core==2.24.2
 google-auth==2.39.0
 googleapis-common-protos==1.70.0
 gradio==5.26.0
 gradio_client==1.9.0
 groovy==0.1.2
-grpcio==1.71.0
+grpcio==1.72.0rc1
+grpcio-status==1.72.0rc1
 h11 @ file:///home/conda/feedstock_root/build_artifacts/h11_1733327467879/work
 h2 @ file:///home/conda/feedstock_root/build_artifacts/h2_1738578511449/work
 hpack @ file:///home/conda/feedstock_root/build_artifacts/hpack_1737618293087/work
@@ -83,9 +94,13 @@ langchain==0.3.24
 langchain-chroma==0.2.3
 langchain-community==0.3.22
 langchain-core==0.3.55
+langchain-google-genai==2.1.3
 langchain-openai==0.3.14
 langchain-text-splitters==0.3.8
+langcodes==3.5.0
 langsmith==0.3.33
+language_data==1.3.0
+marisa-trie==1.2.1
 markdown-it-py @ file:///home/conda/feedstock_root/build_artifacts/markdown-it-py_1733250460757/work
 MarkupSafe @ file:///Users/runner/miniforge3/conda-bld/markupsafe_1724959497253/work
 marshmallow==3.26.1
@@ -96,10 +111,12 @@ mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.4.3
+murmurhash==1.0.12
 mypy_extensions==1.1.0
 narwhals==1.36.0
 nbformat==5.10.4
 nest_asyncio @ file:///home/conda/feedstock_root/build_artifacts/nest-asyncio_1733325553580/work
+nltk==3.9.1
 numpy @ file:///Users/runner/miniforge3/conda-bld/numpy_1745118924781/work/dist/numpy-2.2.5-cp310-cp310-macosx_11_0_arm64.whl#sha256=c1e9ae581fd91e1bbee2dcd2adee8f5d2d9bc8770e334da24b4aa3642953adf4
 oauthlib==3.2.2
 onnxruntime==1.21.1
@@ -125,10 +142,13 @@ pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1735929731714/work
 platformdirs @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_platformdirs_1742485085/work
 plotly==6.0.1
 posthog==3.25.0
+preshed==3.0.9
 prompt_toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1744724089886/work
 propcache==0.3.1
-protobuf==5.29.4
+proto-plus==1.26.1
+protobuf==6.31.0rc1
 psutil @ file:///Users/runner/miniforge3/conda-bld/psutil_1740663218114/work
+pt_core_news_md @ https://github.com/explosion/spacy-models/releases/download/pt_core_news_md-3.8.0/pt_core_news_md-3.8.0-py3-none-any.whl#sha256=54382cda034e41f3ec605ceeb924cd6cfdbced00a65f7afa12218520ba7008c5
 ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1733302279685/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl#sha256=92c32ff62b5fd8cf325bec5ab90d7be3d2a8ca8c8a3813ff487a8d2002630d1f
 pure_eval @ file:///home/conda/feedstock_root/build_artifacts/pure_eval_1733569405015/work
 pyasn1==0.6.1
@@ -165,12 +185,20 @@ scipy==1.15.2
 semantic-version @ file:///home/conda/feedstock_root/build_artifacts/semantic_version_1653579368137/work
 shellingham @ file:///home/conda/feedstock_root/build_artifacts/shellingham_1733300899265/work
 six @ file:///home/conda/feedstock_root/build_artifacts/six_1733380938961/work
+smart-open==7.1.0
 sniffio @ file:///home/conda/feedstock_root/build_artifacts/sniffio_1733244044561/work
+snowballstemmer==2.2.0
+soupsieve==2.7
+spacy==3.8.5
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
 SQLAlchemy==2.0.40
+srsly==2.5.1
 stack_data @ file:///home/conda/feedstock_root/build_artifacts/stack_data_1733569443808/work
 starlette @ file:///home/conda/feedstock_root/build_artifacts/bld/rattler-build_starlette_1744661396/work
 sympy==1.13.3
 tenacity==9.1.2
+thinc==8.3.6
 threadpoolctl==3.6.0
 tiktoken==0.9.0
 tokenizers==0.21.1
@@ -188,11 +216,14 @@ tzdata @ file:///home/conda/feedstock_root/build_artifacts/python-tzdata_1742745
 urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1744323578849/work
 uvicorn @ file:///home/conda/feedstock_root/build_artifacts/uvicorn_1745173431065/work
 uvloop @ file:///Users/runner/miniforge3/conda-bld/uvloop_1730214414718/work
+wasabi==1.1.3
 watchfiles @ file:///Users/runner/miniforge3/conda-bld/watchfiles_1744451414142/work
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
+weasel==0.4.1
 websocket-client==1.8.0
 websockets @ file:///Users/runner/miniforge3/conda-bld/websockets_1697914722358/work
 widgetsnbextension @ file:///home/conda/feedstock_root/build_artifacts/widgetsnbextension_1744291053367/work
+wordcloud==1.9.4
 wrapt==1.17.2
 yarl==1.20.0
 zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1732827521216/work
